--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-patterns'
 include 'kodilla-extra'
+include 'kodilla-jdbc'
 
