--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'kodilla-patterns'
 include 'kodilla-patterns'
 include 'kodilla-extra'
 include 'kodilla-jdbc'
+include 'kodilla-hibernate'
 
